# conformalprediction

./: .gitignore  404.html  CITATION.cff  CNAME  README.md  SKILL.md  UPDATE_ME_CLAUDE.md  alternatives.html  applications.html  benchmark.html  blogs.html  connections.html  faq.html  index.html  literature.html  map.html  notes.html  patterns.html  pyproject.toml  reading.html  recipes.html  robots.txt  sitemap.xml  theory.html  timeseries-conditional.html  timeseries.html
.github/workflows/: publish.yml
benchmark/: README.md  common.py  requirements.txt  run_tabular.py  run_timeseries.py  skater_shootout.py  ts_methods.py
benchmark/results/: tabular_results.csv  ts_results.csv
conformalguide/: __init__.py  core.py  guardrails.py
conformalprediction/: __init__.py
css/: style.css
data/: cp_papers_labeled.tsv
demos/: 01-how-conformal-works.html  02-marginal-vs-conditional.html  03-trivial-validity.html  04-coverage-vs-logscore.html  05-drift-timeseries.html  05-exchangeability-timeseries.html  06-conformal-vs-recalibration.html  07-price-of-conditional-coverage.html  08-subgroup-coverage.html  09-prediction-sets.html  10-anomaly-pvalues.html  11-guaranteed-recall.html  12-safety-envelope.html  13-coverage-score-plane.html  14-four-readings.html  15-de-finetti.html  16-thurstone.html  17-laplace-vs-conformal.html  18-conformal-fan.html  19-dependence-tax.html  20-coverage-vs-price.html  21-herding-slots.html  22-timeseries-fan.html  23-steinitz-balancing.html  24-balanced-placements.html  25-bayesian-quadrature.html  25-coverage-lottery.html  26-bayesian-quadrature.html  27-universal-cpd.html  28-price-of-dumb.html
js/: demo01.js  demo02.js  demo03.js  demo04.js  demo05.js  demo06.js  demo07.js  demo08.js  demo09.js  demo10.js  demo11.js  demo12.js  demo13.js  demo14.js  demo15.js  demo16.js  demo17.js  demo18.js  demo19.js  demo20.js  demo21.js  demo22.js  demo23.js  demo24.js  demo25.js  demo26.js  demo27.js  demo28.js
js/lib/: plot.js  stats.js  ui.js
medium/: README.md  its-an-order-statistic-not-a-model.md
paper/: check_gap.py  figures.py  index.html  marginally-useful.tex  references.bib
paper/definetti-feynman/: check_dcov.py  check_sign.py  (+2 more)
papers/: index.html  notes.bib
(+31 files in other folders)
