[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conformalguide"
version = "0.0.1"
description = "A practical guide to conformal prediction, plus a tiny dependency-free split-conformal core."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Peter Cotton" }]
keywords = [
    "conformal prediction", "uncertainty quantification", "prediction intervals",
    "coverage", "calibration", "distribution-free",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://conformalprediction.net"
Repository = "https://github.com/microprediction/conformalprediction"

[tool.hatch.build.targets.wheel]
packages = ["conformalguide"]

[tool.hatch.build.targets.sdist]
include = ["conformalguide", "pyproject.toml", "README.md", "LICENSE"]
